creating the account manager selector and adding account manager filter and info classes and adding new methods to the account manager definition manager and the account manager assignment manager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44634

--- a/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
@@ -48,6 +48,8 @@
     <Compile Include="AccountManagerAssignmentConfig.cs" />
     <Compile Include="AccountManagerDefinitionConfig.cs" />
     <Compile Include="AccountManagerDetail.cs" />
+    <Compile Include="AccountManagerFilter.cs" />
+    <Compile Include="AccountManagerInfo.cs" />
     <Compile Include="AccountManagerQuery.cs" />
     <Compile Include="AccountManagerSubViewsConfig.cs" />
     <Compile Include="Definition\AccountManagerAssignmentDefinition.cs" />
