Implementation of Localization Language Management
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44638

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -163,6 +163,8 @@
     <Compile Include="VRExclusiveSession\VRExclusiveSessionTypeSettings.cs" />
     <Compile Include="VRLocalization\VRLocalizationLanguage.cs" />
     <Compile Include="VRLocalization\VRLocalizationLanguageDetail.cs" />
+    <Compile Include="VRLocalization\VRLocalizationLanguageFilter.cs" />
+    <Compile Include="VRLocalization\VRLocalizationLanguageInfo.cs" />
     <Compile Include="VRLocalization\VRLocalizationLanguageQuery.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResource.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResourceTranslation.cs" />
