Adding module classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44639

--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -119,6 +119,7 @@
     <Compile Include="VRExclusiveSession\VRExclusiveSessionManager.cs" />
     <Compile Include="VRLocalization\VRLocalizationLanguageManager.cs" />
     <Compile Include="VRLocalization\VRLocalizationManager.cs" />
+    <Compile Include="VRLocalization\VRLocalizationModuleManager.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResourceManager.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResourceTranslationManager.cs" />
     <Compile Include="VRMail\VRMailManager.cs" />
