--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -61,6 +61,7 @@
     <Compile Include="VREventHandlerDataManager.cs" />
     <Compile Include="VRExclusiveSessionDataManager.cs" />
     <Compile Include="VRLocalizationLanguageDataManager.cs" />
+    <Compile Include="VRLocalizationModuleDataManager.cs" />
     <Compile Include="VRLocalizationTextResourceDataManager.cs" />
     <Compile Include="VRLoggableEntityDataManager.cs" />
     <Compile Include="VRObjectTrackingDataManager.cs" />
