--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IVREventHandlerDataManager.cs" />
     <Compile Include="IVRExclusiveSessionDataManager.cs" />
     <Compile Include="IVRLocalizationLanguageDataManager.cs" />
+    <Compile Include="IVRLocalizationModuleDataManager.cs" />
     <Compile Include="IVRLocalizationTextResourceDataManager.cs" />
     <Compile Include="IVRLoggableEntityDataManager.cs" />
     <Compile Include="IVRObjectTrackingDataManager.cs" />
