--- a/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
+++ b/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controllers\OverriddenConfigurationController.cs" />
     <Compile Include="Controllers\OverriddenConfigurationGroupController.cs" />
     <Compile Include="Controllers\VRLocalizationLanguageController.cs" />
+    <Compile Include="Controllers\VRLocalizationModuleController.cs" />
     <Compile Include="Controllers\VRLocalizationTextResourceController.cs" />
     <Compile Include="Controllers\VRMailController.cs" />
     <Compile Include="Controllers\VRObjectTrackingController.cs" />
@@ -301,6 +302,9 @@
     <Content Include="Common\Directives\VRDocument\Templates\VRDocumentGridTemplate.html" />
     <Content Include="Common\Directives\VRDocument\vr-common-document-grid.js" />
     <Content Include="Common\Directives\VRDocument\vr-common-documentcategory-selector.js" />
+    <Content Include="Common\Directives\VRLocalization\Module\Templates\VRLocalizationModuleGridTemplate.html" />
+    <Content Include="Common\Directives\VRLocalization\Module\vr-common-vrlocalizationmodule-grid.js" />
+    <Content Include="Common\Directives\VRLocalization\Module\vr-common-vrlocalizationmodule-selector.js" />
     <Content Include="Common\Directives\VRLocalization\TextResource\Templates\VRLocalizationTextResourceGridTemplate.html" />
     <Content Include="Common\Directives\VRLocalizationLanguage\Templates\VRLocalizationLanguageGridTemplate.html" />
     <Content Include="Common\Directives\VRLocalizationLanguage\vr-common-vrlocalizationlanguage-grid.js" />
@@ -436,6 +440,7 @@
     <Content Include="Common\Services\APIServices\OverriddenConfigAPIService.js" />
     <Content Include="Common\Services\APIServices\OverriddenConfigGroupAPIService.js" />
     <Content Include="Common\Services\APIServices\VRLocalizationLanguageAPIService.js" />
+    <Content Include="Common\Services\APIServices\VRLocalizationModuleAPIService.js" />
     <Content Include="Common\Services\APIServices\VRLocalizationTextResourceAPIService.js" />
     <Content Include="Common\Services\APIServices\VRRuleDefinitionAPIService.js" />
     <Content Include="Common\Services\APIServices\VRTileAPIService.js" />
@@ -477,6 +482,7 @@
     <Content Include="Common\Services\VRConnectionService.js" />
     <Content Include="Common\Services\VRComponentTypeService.js" />
     <Content Include="Common\Services\VRLocalizationLanguageService.js" />
+    <Content Include="Common\Services\VRLocalizationModuleService.js" />
     <Content Include="Common\Services\VRLocalizationTextResourceService.js" />
     <Content Include="Common\Services\VRMailService.js" />
     <Content Include="Common\Services\VRTileService.js" />
@@ -604,6 +610,10 @@
     <Content Include="Common\Views\VRLocalizationLanguage\VRLocalizationLanguageEditorController.js" />
     <Content Include="Common\Views\VRLocalizationLanguage\VRLocalizationLanguageManagement.html" />
     <Content Include="Common\Views\VRLocalizationLanguage\VRLocalizationLanguageManagementController.js" />
+    <Content Include="Common\Views\VRLocalization\Module\VRLocalizationModuleEditor.html" />
+    <Content Include="Common\Views\VRLocalization\Module\VRLocalizationModuleEditorController.js" />
+    <Content Include="Common\Views\VRLocalization\Module\VRLocalizationModuleManagement.html" />
+    <Content Include="Common\Views\VRLocalization\Module\VRLocalizationModuleManagementController.js" />
     <Content Include="Common\Views\VRLocalization\TextResource\VRLocalizationTextResourceEditor.html" />
     <Content Include="Common\Views\VRLocalization\TextResource\VRLocalizationTextResourceEditorController.js" />
     <Content Include="Common\Views\VRLocalization\TextResource\VRLocalizationTextResourceManagement.html" />
