Implement BalanceAlertCheckerBPDefinitionSettings and BalanceAlertThresholdUpdateBPDefinitionSettings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44652

--- a/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
@@ -49,6 +49,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BPDefinitionExtendedSettings\BalanceAlertCheckerBPDefinitionSettings.cs" />
+    <Compile Include="BPDefinitionExtendedSettings\BalanceAlertThresholdUpdateBPDefinitionSettings.cs" />
     <Compile Include="BPDefinitionExtendedSettings\ExecuteNotificationBPDefinitionExtendedSettings.cs" />
     <Compile Include="Filters\IBusinessEntityDefinitionFilter\VRAlertLevelBEDefinitionFilter.cs" />
     <Compile Include="Filters\IVRAlertRuleTypeFilter\VRBalanceAlertRuleTypeFilter.cs" />
