Add Bad Records Check
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44656

--- a/Mediation/Code/Mediation.Generic.Business/Mediation.Generic.Business.csproj
+++ b/Mediation/Code/Mediation.Generic.Business/Mediation.Generic.Business.csproj
@@ -91,6 +91,7 @@
     <Compile Include="MediationCommittedIdManager.cs" />
     <Compile Include="MediationDefinitionManager.cs" />
     <Compile Include="MediationProcessContext.cs" />
+    <Compile Include="BadMediationRecordsManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MediationRecordsManager.cs" />
   </ItemGroup>
