--- a/Mediation/Code/Mediation.Generic.Data/Mediation.Generic.Data.csproj
+++ b/Mediation/Code/Mediation.Generic.Data/Mediation.Generic.Data.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBadMediationRecordsDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IMediationCommittedIdDataManager.cs" />
     <Compile Include="IMediationDefinitionDataManager.cs" />
