adding a new rule to check for moving closed codes to a new zone
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44664

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
@@ -74,6 +74,7 @@
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\AddMoveCodeToPendingClosedZoneCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessingCodes\MoveCodeNotExistAndEffectiveCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\ClosePendingClosedCodeCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\MoveClosedCodeToNewZoneCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\MovePendingClosedCodeCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\MovePendingEffectiveCodeCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\NewZoneWithNoRatesCondition.cs" />
