Add Files And Activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44666

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
@@ -109,6 +109,7 @@
     <Compile Include="SetContextDataByZoneList.cs" />
     <Compile Include="SetContextEffectiveAfterCustomerZoneRatesByZone.cs" />
     <Compile Include="SetContextExistingZonesByCountry.cs" />
+    <Compile Include="SetContextInheretidSaleZoneRoutingProductByZoneId.cs" />
     <Compile Include="SetContextInheritedRatesByZoneId.cs" />
     <Compile Include="SetDefaultRates.cs" />
     <Compile Include="SetRatePlanContext.cs" />
