Implementation of LocalizationTextResource
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44691

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -172,6 +172,10 @@
     <Compile Include="VRLocalization\VRLocalizationModuleInfo.cs" />
     <Compile Include="VRLocalization\VRLocalizationModuleQuery.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResource.cs" />
+    <Compile Include="VRLocalization\VRLocalizationTextResourceDetail.cs" />
+    <Compile Include="VRLocalization\VRLocalizationTextResourceInfo.cs" />
+    <Compile Include="VRLocalization\VRLocalizationTextResourceInfoFilter.cs" />
+    <Compile Include="VRLocalization\VRLocalizationTextResourceQuery.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResourceTranslation.cs" />
     <Compile Include="VRMail\VRMail.cs" />
     <Compile Include="VRMail\VRMailAttachement.cs" />
